(lang dune 3.19)

(name sqlitecaml)

(generate_opam_files true)


(source
 (github username/reponame))

(authors "Amir Razak <meow@amirrazak.com>")

(maintainers "Amir Razak <meow@amirrazak.com>")
(license LICENSE)

(package
 (name sqlitecaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

